--- a/Stylesheet/stylesheet.css
+++ b/Stylesheet/stylesheet.css
@@ -14,6 +14,8 @@ table{
     left: 50%;
     position: absolute;
     transform: translate(-50%, -55%);
+    /* border-collapse: collapse; */
+    
 }
 
 tr, td{
